Reemplaza portafolio viejo por versión final

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 </div>
 
                 <div class="indicator-card" data-animate>
-                    <h3>JavaScript</h3>
+                    <h3>Kotlin</h3>
                     <div class="label-container">
                         <div class="progress-line"></div>
                     </div>
@@ -151,6 +151,16 @@
             <div id="Educacion" class="Educacion">
 
                 <h1 class="education-title"> Training </h1>
+                <br>
+                <br>
+                <br>
+                <a href="certifications/interfacesAndroidStudio.pdf" download> <img
+                        src="certifications/certificado-1bb42543-af72-46d9-a6de-4a6d18ab9e54-b4c71be5-59a9-4990-920f-791daf2c3a3e_page-0001.jpg"
+                        alt="Certificado creacion de interfaces en android studio" style="max-width:300px" ;>
+                </a>
+                <br>
+                <br>
+
             </div>
 
 
@@ -182,7 +192,7 @@
                         <div class="card">
                             <div class="slide slide1">
                                 <div class="content">
-                                    
+
                                     <div class="icon">
                                         <i class="fa-brands fa-instagram fa-6x"></i>
                                     </div>
