--- a/index.html
+++ b/index.html
@@ -154,85 +154,111 @@
                 <br>
                 <br>
                 <br>
-                <a href="certifications/interfacesAndroidStudio.pdf" download> <img
-                        src="certifications/certificado-1bb42543-af72-46d9-a6de-4a6d18ab9e54-b4c71be5-59a9-4990-920f-791daf2c3a3e_page-0001.jpg"
-                        alt="Certificado creacion de interfaces en android studio" style="max-width:300px" ;>
-                </a>
-                <br>
-                <br>
 
-            </div>
-
-
-            <div id="Contactos" class="Contactos">
-
-                <h1 class="contact-title">Contact me</h1>
-                <br>
-                <div class="cards-wrapper">
-                    <div class="container">
-                        <div class="card">
-                            <div class="slide slide1">
-                                <div class="content">
-                                    <div class="icon">
-                                        <i class="fa-regular fa-envelope fa-6x"></i>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="slide slide2">
-                                <div class="content">
-                                    <h2>Email</h2>
-                                    <address>
-                                        <p><a href="mailto:micolasperdi@gmail.com"> micolasperdi@gmail.com </a></p>
-                                    </address>
-                                </div>
-                            </div>
-                        </div>
+                <div id="certificates-gallery">
+                    <div class="certificates">
+                        <a href="certifications/interfacesAndroidStudio.pdf">
+                            <img
+                                src="certifications/certificado-1bb42543-af72-46d9-a6de-4a6d18ab9e54-b4c71be5-59a9-4990-920f-791daf2c3a3e_page-0001.jpg" />
+                            <span class="title">Interfaces en android studio - Platzi</span>
+                        </a>
                     </div>
-                    <div class="container">
-                        <div class="card">
-                            <div class="slide slide1">
-                                <div class="content">
 
-                                    <div class="icon">
-                                        <i class="fa-brands fa-instagram fa-6x"></i>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="slide slide2">
-                                <div class="content">
-                                    <h2>Instagram</h2>
-                                    <address>
-                                        <p><a href="https://www.instagram.com/per.d2/">perdi2</a></p>
-                                    </address>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="certificates">
+                        <a href="certifications/pentesting.pdf">
+                            <img src="certifications/pentesting_page-0001.jpg">
+                            <span class="title">Introduccion al pentesting - Platzi</span>
+                        </a>
                     </div>
-                    <div class="container">
-                        <div class="card">
-                            <div class="slide slide1">
-                                <div class="content">
-                                    <div class="icon">
-                                        <i class="fa-brands fa-github fa-6x"></i>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="slide slide2">
-                                <div class="content">
-                                    <h2>Github</h2>
-                                    <address>
-                                        <p><a href="https://github.com/NicolasDPZ">NicolasDPZ</a></p>
-                                    </address>
-                                </div>
-                            </div>
-                        </div>
+
+                    <div class="certificates">
+                        <a href="certifications/servidoresLinux.pdf">
+                            <img src="certifications/servidoresLinux_page-0001.jpg">
+                            <span class="title">Administracion de servidores linux - Platzi</span>
+                        </a>
+                    
                     </div>
+                    
                 </div>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
 
-            </div>
-            <br>
-            <br>
-            <br>
+                <div id="Contactos" class="Contactos">
+
+                    <h1 class="contact-title">Contact me</h1>
+                    <br>
+                    <div class="cards-wrapper">
+                        <div class="container">
+                            <div class="card">
+                                <div class="slide slide1">
+                                    <div class="content">
+                                        <div class="icon">
+                                            <i class="fa-regular fa-envelope fa-6x"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="slide slide2">
+                                    <div class="content">
+                                        <h2>Email</h2>
+                                        <address>
+                                            <p><a href="mailto:micolasperdi@gmail.com"> micolasperdi@gmail.com </a></p>
+                                        </address>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="container">
+                            <div class="card">
+                                <div class="slide slide1">
+                                    <div class="content">
+
+                                        <div class="icon">
+                                            <i class="fa-brands fa-instagram fa-6x"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="slide slide2">
+                                    <div class="content">
+                                        <h2>Instagram</h2>
+                                        <address>
+                                            <p><a href="https://www.instagram.com/per.d2/">perdi2</a></p>
+                                        </address>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="container">
+                            <div class="card">
+                                <div class="slide slide1">
+                                    <div class="content">
+                                        <div class="icon">
+                                            <i class="fa-brands fa-github fa-6x"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="slide slide2">
+                                    <div class="content">
+                                        <h2>Github</h2>
+                                        <address>
+                                            <p><a href="https://github.com/NicolasDPZ">NicolasDPZ</a></p>
+                                        </address>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <br>
+                <br>
+                <br>
 
 
     </main>
